<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/min_margin"
        android:layout_marginTop="@dimen/min_margin"
        android:layout_marginRight="@dimen/min_margin"
        android:layout_marginBottom="@dimen/min_margin"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_marginRight="@dimen/min_margin"
            android:layout_marginBottom="@dimen/min_margin"
            android:orientation="vertical"
            tools:context=".ui.GithubDetailFragment">

            <TextView
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                tools:text="@string/template_full_name" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                tools:text="@string/template_desc" />

            <TextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                tools:text="@string/template_url" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                tools:text="@string/template_username" />

            <TextView
                android:id="@+id/stars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/min_margin"
                tools:text="@string/template_star" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <ImageView
                android:id="@+id/dp"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/min_margin"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/baseline_open_in_browser_24"
            android:tint="#FFFFFF" />
    </com.google.android.material.card.MaterialCardView>
</ScrollView>
